--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">My First App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="button_run">Run</string>
+    <string name="button_gallery">Gallery</string>
+    <string name="button_camera">Camera</string>
 
 </resources>
