--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My First App</string>
+    <string name="app_name">Leaf Classifier</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="button_gallery">Gallery</string>
     <string name="button_camera">Camera</string>
+    <string name="loading">Loading...</string>
+    <string name="error">ERROR</string>
+    <string name="none"></string>
 
 </resources>
